[package]
name = "hdwallet-fc"
description = "hdwallet "
version = "0.2.0"
authors = ["fcihpy@gmail.com"]
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["hdwallet", "bip32"]

[lib]
name = "hdwallet_fc"
path = "src/lib.rs"

[dependencies]

hdpath = { version = "0.6", features = ["with-bitcoin"] }
secp256k1 = "0.20.3"
bitcoin = "0.27.0"
bip39 = "2.0.0"
hex = "0.4.3"